# SoloFlow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CI_FIX_GUIDE.md  CODE_METRICS.md  CODE_REVIEW_CHECKLIST.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  install.sh  main.py  requirements.txt  types.py
.github/: pull_request_template.md
.specify/: feature.json
cli/: trace_cmd.py
core/: __init__.py  dag.py
hermes-plugin/: __init__.py  config.py  models.py  plugin.yaml  pyproject.toml  run_tests.py
hermes-plugin/.pytest_cache/v/cache/: lastfailed  nodeids
hermes-plugin/agent/: __init__.py  memory_provider.py
hermes-plugin/boundary/: __init__.py
hermes-plugin/checkpoint/: __init__.py
hermes-plugin/context/: __init__.py
hermes-plugin/core/: __init__.py  dag.py  fsm.py
hermes-plugin/dispatch/: __init__.py
hermes-plugin/governance/: __init__.py
hermes-plugin/handoff/: __init__.py
hermes-plugin/hooks/: __init__.py
hermes-plugin/human/: __init__.py  approval.py
hermes-plugin/memory/: __init__.py  episodic_memory.py  semantic_memory.py  working_memory.py
hermes-plugin/output/: __init__.py
hermes-plugin/pipeline/: __init__.py
hermes-plugin/roles/: __init__.py
hermes-plugin/services/: __init__.py  scheduler.py  workflow_service.py
hermes-plugin/session/: __init__.py
hermes-plugin/store/: migrations.py  sqlite_store.py
hermes-plugin/tests/: __init__.py  conftest.py  test_dag.py  test_fsm.py  test_models.py
hermes-plugin/visualization/: __init__.py
(+285 files in other folders)
