[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "soloflow-hermes-plugin"
version = "0.1.0"
description = "SoloFlow - DAG + FSM workflow orchestration for AI agents"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --rootdir=. --override-ini=collect_ignore_glob=['__init__.py']"
